[tool.poetry]
name = "typer-tutorial"
version = "0.1.1"
description = ""
authors = ["Jeff McCarrell <jeff@mccarrell.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.18"
typer = {version = "^0.9.0", extras = ["all"]}
pydantic = "^2.6.3"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
